[project]
name = "deconvolute-proxy"
version = "0.1.0"
description = "Security proxy for MCP servers powered by the Deconvolute SDK"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]",
    "deconvolute",
    "uvicorn[standard]",
    "pydantic-settings",
    "httpx",
]

[project.scripts]
proxy = "deconvolute_proxy.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deconvolute_proxy"]
